--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chrome-launcher": "^0.8.0",
     "chrome-remote-interface": "^0.24.1",
     "compression": "^1.7.0",
+    "cors": "^2.8.4",
     "express": "^4.15.2",
     "performance-now": "^2.1.0",
     "progress-bar-element": "^2.0.1",
